--- a/index.html
+++ b/index.html
@@ -14,20 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,300;1,14..32,300&display=swap" rel="stylesheet">
-
-    <!-- Google Icons -->
-    <!-- Volcano -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=volcano" />    
-    <!-- Wildfires -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=local_fire_department" />
-    <!-- Tsunamis -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=tsunami" />
-    <!-- Hurricanes -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=storm" />
 
 </head>
 
@@ -56,6 +43,7 @@
             </ul>
         </div>
         <form class="search-form" action="#" method="get">
+            <input type="checkbox" id="search-toggle" class="search-toggle-checkbox">
             <input class="search-bar" type="text" name="query" placeholder="Search...">
             <button class="search-icon" type="submit">🔍</button>
         </form>
@@ -215,9 +203,13 @@
             </div>
 
             <div class="footer-content">
+                <div>
                 <h3>Contact Us</h3>
-                <button type="">E-Mail</button>
+                <button type="">E-Mail Us</button>
+                <button type="">Call Us</button>
+                </div>
 
+                <div>
                 <h3>Quick Links</h3>
                 <ul>
                 <li><a href="/about">About Us</a></li>
@@ -225,14 +217,16 @@
                 <li><a href="/terms-of-service">Terms of Service</a></li>
                 <li><a href="/faqs">FAQs</a></li>
                 </ul>
+            </div>
 
+            <div>
                 <h3>Follow Us</h3>
                 <ul>
                 <li><a href="https://facebook.com"><i class="fab fa-facebook">Facebook</a></li>
                 <li><a href="https://twitter.com"><i class="fab fa-twitter">Twitter</a></li>
                 <li><a href="https://instagram.com"><i class="fab fa-instagram">Instagram</a></li>
                 </ul>
-                
+                </div>
             </div>
         </div>
 
